--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Be My Valentine 💖</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
       height: 100vh;
@@ -12,15 +13,16 @@
       justify-content: center;
       align-items: center;
       font-family: system-ui, Arial;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: linear-gradient(135deg, #ffb7b7, #ffd1dc);
+      color: #4a1c2f;
     }
 
     .card {
-      background: white;
+      background: linear-gradient(135deg, #fff1f2, #ffe4e6);
       padding: 30px 35px;
-      border-radius: 20px;
+      border-radius: 22px;
       text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      box-shadow: 0 12px 35px rgba(0,0,0,0.18);
       max-width: 600px;
       width: calc(100% - 40px);
     }
@@ -31,7 +33,7 @@
 
     p {
       font-size: 18px;
-      line-height: 1.5;
+      line-height: 1.6;
     }
 
     h2 {
@@ -47,10 +49,15 @@
     button {
       padding: 12px 22px;
       font-size: 18px;
-      border-radius: 12px;
+      border-radius: 14px;
       border: none;
       cursor: pointer;
       position: absolute;
+      transition: transform 0.15s ease;
+    }
+
+    button:active {
+      transform: scale(0.95);
     }
 
     #yes {
@@ -62,7 +69,7 @@
     }
 
     #no {
-      background: #ccc;
+      background: #d3d3d3;
       color: #333;
       left: 20%;
       top: 20%;
@@ -130,11 +137,18 @@
           justify-content:center;
           align-items:center;
           font-family:system-ui;
-          background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+          background:linear-gradient(135deg,#ffb7b7,#ffd1dc);
           text-align:center;
           padding:40px;
+          color:#4a1c2f;
         ">
-          <div style="max-width:700px;">
+          <div style="
+            max-width:700px;
+            background:linear-gradient(135deg,#fff1f2,#ffe4e6);
+            padding:35px;
+            border-radius:22px;
+            box-shadow:0 12px 35px rgba(0,0,0,0.18);
+          ">
             <h1 style="font-size:32px; margin-bottom:20px;">
               💖 Big Congratulations 💖
             </h1>
