Fix HTML encoding and add Ponyo image

--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
       border-radius: 22px;
       text-align: center;
       box-shadow: 0 12px 35px rgba(0,0,0,0.18);
-      max-width: 600px;
+      max-width: 620px;
       width: calc(100% - 40px);
+    }
+
+    .ponyo-img {
+      width: 140px;
+      height: auto;
+      border-radius: 16px;
+      margin-bottom: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
     }
 
     h1 {
@@ -79,6 +87,14 @@
 <body>
 
   <div class="card">
+
+    <!-- Ponyo Image -->
+    <img
+      src="https://i.pinimg.com/564x/7f/40/2f/7f402f4f09c2d7e8c4cf40a2f9c4c5de.jpg"
+      alt="Ponyo"
+      class="ponyo-img"
+    />
+
     <h1>Hey my Ponyo 💖</h1>
 
     <p>
@@ -149,9 +165,7 @@
             border-radius:22px;
             box-shadow:0 12px 35px rgba(0,0,0,0.18);
           ">
-            <h1 style="font-size:32px; margin-bottom:20px;">
-              💖 Big Congratulations 💖
-            </h1>
+            <h1>💖 Big Congratulations 💖</h1>
 
             <p style="font-size:20px; line-height:1.6;">
               You are officially, proudly, and forever<br>
