--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
       border-radius: 22px;
       text-align: center;
       box-shadow: 0 12px 35px rgba(0,0,0,0.18);
-      max-width: 620px;
+      max-width: 600px;
       width: calc(100% - 40px);
     }
 
+    /* ✅ Add this so the image looks good */
     .ponyo-img {
       width: 140px;
       height: auto;
       border-radius: 16px;
       margin-bottom: 15px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
-    h1 {
-      margin-bottom: 15px;
-    }
+    h1 { margin-bottom: 15px; }
 
     p {
       font-size: 18px;
       line-height: 1.6;
     }
 
-    h2 {
-      margin-top: 25px;
-    }
+    h2 { margin-top: 25px; }
 
     .buttons {
       position: relative;
@@ -64,9 +64,7 @@
       transition: transform 0.15s ease;
     }
 
-    button:active {
-      transform: scale(0.95);
-    }
+    button:active { transform: scale(0.95); }
 
     #yes {
       background: #ff4d6d;
@@ -87,13 +85,7 @@
 <body>
 
   <div class="card">
-
-    <!-- Ponyo Image -->
-    <img
-      src="https://i.pinimg.com/564x/7f/40/2f/7f402f4f09c2d7e8c4cf40a2f9c4c5de.jpg"
-      alt="Ponyo"
-      class="ponyo-img"
-    />
+    <img src="ponyo.jpg" alt="Ponyo" class="ponyo-img" />
 
     <h1>Hey my Ponyo 💖</h1>
 
@@ -165,7 +157,9 @@
             border-radius:22px;
             box-shadow:0 12px 35px rgba(0,0,0,0.18);
           ">
-            <h1>💖 Big Congratulations 💖</h1>
+            <h1 style="font-size:32px; margin-bottom:20px;">
+              💖 Big Congratulations 💖
+            </h1>
 
             <p style="font-size:20px; line-height:1.6;">
               You are officially, proudly, and forever<br>
